--- a/batchrun.config.json
+++ b/batchrun.config.json
@@ -2,5 +2,5 @@
     "npx next dev -p 3700",
     "lessc-watcher",
     "bun build ./bin/index.ts --outdir ./bin --watch --target node",
-    "bun build ./components/react/index.ts --outdir ./dist/react/components --watch --splitting --minify"
+    "bun build ./src/components/index.ts --outdir ./dist/components --watch --splitting --minify"
 ]
