--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
     "name": "blaze-ui",
     "version": "1.0.0",
-    "main": "dist/index.js",
-    "files": [
-        "dist/"
-    ],
+    "main": "dist/components/index.js",
     "type": "module",
     "bin": {
         "blaze": "bin/index.js"
